change page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>This is a Microsoft Cognitive Services API test!</title>
+		<title>Microsoft Cognitive Services API | Read Your Meme!</title>
 		<link rel=stylesheet href="style.css" />
 	</head>
 	<body>
